- tests for meal period order: @TC40439 @TC40450 @TC40480 @TC40451 @TC40599 @TC40598 @TC40448

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -442,7 +442,7 @@
     <Compile Include="PageObjects\Planning\NutritionTabWeeks\NutritionDayRow.cs" />
     <Compile Include="PageObjects\Planning\NutritionTabWeeks\NutritionWeekMealPeriod.cs" />
     <Compile Include="PageObjects\Planning\PlanningTabWeeks\PlanningDayRow.cs" />
-    <Compile Include="PageObjects\Planning\PlanningTabWeeks\PlanningWeekMealPeriod.cs" />
+    <Compile Include="PageObjects\Planning\PlanningTabWeeks\PlanningWeekMealPeriodRow.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabWeeks\PostProductionDayRow.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabWeeks\PostProductionWeekMealPeriod.cs" />
     <Compile Include="Support\Helpers\Wait.cs" />
