--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -1,34 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appium.WebDriver" version="4.0.0.6-beta" targetFramework="net471" />
-  <package id="Autofac" version="4.9.2" allowedVersions="4.6.2.0" targetFramework="net471" />
-  <package id="BoDi" version="1.4.0-alpha1" targetFramework="net471" />
-  <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
+  <package id="Autofac" version="4.9.2" targetFramework="net471" />
+  <package id="BoDi" version="1.4.1" targetFramework="net472" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
   <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Core" version="4.3.67" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="4.3.67" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Reporting" version="4.2.63" targetFramework="net471" />
-  <package id="FourthApp.Pages" version="1.0.17" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="4.3.68" targetFramework="net472" />
+  <package id="Fourth.Automation.Framework.Mobile" version="4.3.68" targetFramework="net472" />
+  <package id="Fourth.Automation.Framework.Reporting" version="4.3.68" targetFramework="net472" />
+  <package id="FourthApp.Pages" version="1.0.17" targetFramework="net472" />
   <package id="Gherkin" version="6.0.0" targetFramework="net471" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net471" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
-  <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net471" />
-  <package id="Polly" version="5.9.0" targetFramework="net471" />
+  <package id="Polly" version="5.9.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net471" />
-  <package id="Selenium.WebDriver.ChromeDriver" version="75.0.3770.90" targetFramework="net471" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="75.0.3770.140" targetFramework="net472" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.24.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.IEDriver" version="3.141.59" targetFramework="net471" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net471" />
-  <package id="SpecFlow" version="2.3.2" targetFramework="net471" />
-  <package id="SpecFlow.Assist.Dynamic" version="1.3.1" targetFramework="net471" />
+  <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
+  <package id="SpecFlow.Assist.Dynamic" version="1.4.1" targetFramework="net472" />
+  <package id="SpecFlow.Autofac" version="3.0.225" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
@@ -46,7 +47,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
@@ -54,10 +55,11 @@
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
