- add chromedriverExecutableDir to Samsung Tab A config

--- a/MenuCycle.Tests/App.SamsungTabA.config
+++ b/MenuCycle.Tests/App.SamsungTabA.config
@@ -15,6 +15,7 @@
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
       <add key="serial" value="52036fbbecbca32b"/>
+      <add key="chromedriverExecutableDir" value="/Users/uimcm/Chromedrivers/2.46/"/>
     </capabilities>
   </fourth>
 </configuration>
