Change user password

--- a/MenuCycle.Tests/Support/Environment.config
+++ b/MenuCycle.Tests/Support/Environment.config
@@ -4,7 +4,7 @@
     "URL": "http://qapartial-fourth-app.cs87.force.com/",
     "URL_SF": "https://qapartial-fourth-app.cs87.force.com/login?startURL=%2Fidp%2Flogin%3Fapp%3D0sp8E000000009m",
     "User": "martin.petkov@fourth.com",
-    "Password": "Mypasssword_006"
+    "Password": "Mypassword_007"
   },
   "QAI_2": {
     "URL": "http://qapartial-fourth-app.cs87.force.com/",
