- add wdaLocalPort and chromeDriverPort to app.config

--- a/MenuCycle.Tests/App.Nexus6.config
+++ b/MenuCycle.Tests/App.Nexus6.config
@@ -14,9 +14,7 @@
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="browserName" value="Nexus6"/>
-      <add key="version" value="7.1.1"/>
-      <add key="platform" value="Android"/>
+      <add key="chromeDriverPort" value="9505"/>
     </capabilities>
   </fourth>
 </configuration>
