--- a/MenuCycle.Tests/App.Nexus7.config
+++ b/MenuCycle.Tests/App.Nexus7.config
@@ -14,7 +14,7 @@
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="serial" value="0a73000c"/>
+      <add key="chromeDriverPort" value="9504"/>
     </capabilities>
   </fourth>
 </configuration>
