--- a/MenuCycle.Tests/App.SamsungS8Plus.config
+++ b/MenuCycle.Tests/App.SamsungS8Plus.config
@@ -15,6 +15,7 @@
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
+      <add key="chromeDriverPort" value="9503"/>
     </capabilities>
   </fourth>
 </configuration>
