--- a/MenuCycle.Tests/App.SamsungS9.config
+++ b/MenuCycle.Tests/App.SamsungS9.config
@@ -13,9 +13,7 @@
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="browserName" value="SamsungS9"/>
-      <add key="version" value="8.0.0"/>
-      <add key="platform" value="Android"/>
+      <add key="chromeDriverPort" value="9502"/>
     </capabilities>
   </fourth>
 </configuration>
