--- a/MenuCycle.Tests/App.SamsungTabA.config
+++ b/MenuCycle.Tests/App.SamsungTabA.config
@@ -16,6 +16,7 @@
       <add key="autoGrantPermissions" value="true"/>
       <add key="serial" value="52036fbbecbca32b"/>
       <add key="chromedriverExecutableDir" value="/Users/uimcm/Chromedrivers/2.46/"/>
+      <add key="chromeDriverPort" value="9500"/>
     </capabilities>
   </fourth>
 </configuration>
