--- a/MenuCycle.Tests/App.SamsungTabS.config
+++ b/MenuCycle.Tests/App.SamsungTabS.config
@@ -14,9 +14,7 @@
       <add key="appActivity" value="com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity"/>
       <add key="recreateChromeDriverSessions" value="true"/>
       <add key="autoGrantPermissions" value="true"/>
-      <add key="browserName" value="SamsungTabS"/>
-      <add key="version" value="5.0.2"/>
-      <add key="platform" value="Android"/>
+      <add key="chromeDriverPort" value="9501"/>
     </capabilities>
   </fourth>
 </configuration>
