--- a/MenuCycle.Tests/App.iPadAir.config
+++ b/MenuCycle.Tests/App.iPadAir.config
@@ -13,6 +13,7 @@
       <add key="autoWebview" value="true"/>
       <add key="useNewWDA" value="true"/>
       <add key="bundleId" value="com.fourth.qa"/>
+      <add key="wdaLocalPort" value="8101"/>
     </capabilities>
   </fourth>
 </configuration>
