--- a/MenuCycle.Tests/App.iPhone6 Plus.config
+++ b/MenuCycle.Tests/App.iPhone6 Plus.config
@@ -20,9 +20,7 @@
       <add key="startIWDP" value="true" />
       <add key="noReset" value="true" />
       <add key="locationServicesAuthorized" value="true" />
-      <add key="browserName" value="iPhone6Plus"/>
-      <add key="version" value="11.2.6"/>
-      <add key="platform" value="iOS"/>
+      <add key="wdaLocalPort" value="8106"/>
     </capabilities>
   </fourth>
 </configuration>
