--- a/MenuCycle.Tests/App.iPhone6.config
+++ b/MenuCycle.Tests/App.iPhone6.config
@@ -17,9 +17,7 @@
       <add key="showXcodeLog" value="true"/> 
       <add key="xcodeOrgId" value="DK2MYTAD7Z" />
       <add key="xcodeSigningId" value="iPhone Developer" />
-      <add key="browserName" value="iPadPro9"/>
-      <add key="version" value="11.1.1"/>
-      <add key="platform" value="iOS"/>
+      <add key="wdaLocalPort" value="8105"/>
     </capabilities>
   </fourth>
 </configuration>
