--- a/MenuCycle.Tests/App.iPhone7Plus.config
+++ b/MenuCycle.Tests/App.iPhone7Plus.config
@@ -15,6 +15,7 @@
             <add key="startIWDP" value="true" />
             <add key="noReset" value="true" />
             <add key="locationServicesAuthorized" value="true" />
+            <add key="wdaLocalPort" value="8108"/>
         </capabilities>
     </fourth>
 </configuration>
