--- a/MenuCycle.Tests/App.iPadMini4.config
+++ b/MenuCycle.Tests/App.iPadMini4.config
@@ -1,19 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <appSettings>
-    <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
-  </appSettings>
-  <fourth driverType="iOS" serverUrl="http://localhost:4549/wd/hub/" xdt:Transform="Replace">
-    <capabilities>
-      <add key="deviceName" value="iPadMini4"/>
-      <add key="platformVersion" value="12.1.1"/>
-      <add key="udid" value="4ea4b4ca24c58ccec2baeb66d2a51c2688d4032b"/>
-      <add key="platformName" value="iOS"/>
-      <add key="xcodeOrgId" value="DK2MYTAD7Z" />
-      <add key="xcodeSigningId" value="iPhone Developer" />
-      <add key="autoWebview" value="true"/>
-      <add key="useNewWDA" value="true"/>
-      <add key="bundleId" value="com.fourth.qa"/>
-    </capabilities>
-  </fourth>
+    <appSettings>
+        <add key="WebviewName" value="WEBVIEW_1" xdt:Transform="Replace" xdt:Locator="Match(key)" />
+    </appSettings>
+    <fourth driverType="iOS" serverUrl="http://localhost:4549/wd/hub/" xdt:Transform="Replace">
+        <capabilities>
+            <add key="deviceName" value="iPadMini4" />
+            <add key="platformVersion" value="12.1.1" />
+            <add key="udid" value="4ea4b4ca24c58ccec2baeb66d2a51c2688d4032b" />
+            <add key="platformName" value="iOS" />
+            <add key="xcodeOrgId" value="DK2MYTAD7Z" />
+            <add key="xcodeSigningId" value="iPhone Developer" />
+            <add key="autoWebview" value="true" />
+            <add key="useNewWDA" value="true" />
+            <add key="bundleId" value="com.fourth.qa" />
+            <add key="wdaLocalPort" value="8102" />
+        </capabilities>
+    </fourth>
 </configuration>
