--- a/MenuCycle.Tests/App.iPhone7.config
+++ b/MenuCycle.Tests/App.iPhone7.config
@@ -15,9 +15,7 @@
       <add key="showXcodeLog" value="true"/> 
       <add key="xcodeOrgId" value="DK2MYTAD7Z" />
       <add key="xcodeSigningId" value="iPhone Developer" />
-      <add key="browserName" value="iPhone7"/>
-      <add key="version" value="11.0"/>
-      <add key="platform" value="iOS"/>
+      <add key="wdaLocalPort" value="8107"/>
     </capabilities>
   </fourth>
 </configuration>
