--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="BoDi" version="1.4.1" targetFramework="net472" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
+  <package id="Cucumber.Messages" version="4.0.0" targetFramework="net472" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
   <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
@@ -12,6 +13,7 @@
   <package id="Fourth.Automation.Framework.Reporting" version="5.0.70" targetFramework="net472" />
   <package id="FourthApp.Pages" version="1.0.17" targetFramework="net472" />
   <package id="Gherkin" version="6.0.0" targetFramework="net471" />
+  <package id="Google.Protobuf" version="3.7.0" targetFramework="net472" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
@@ -28,7 +30,8 @@
   <package id="Selenium.WebDriver.IEDriver" version="3.150.0" targetFramework="net472" />
   <package id="SlowMonkey" version="1.1.1" targetFramework="net471" />
   <package id="SpecFlow" version="3.0.225" targetFramework="net472" />
-  <package id="SpecFlow.Autofac" version="3.0.225" targetFramework="net472" />
+  <package id="SpecFlow.NUnit" version="3.0.225" targetFramework="net472" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="3.0.225" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
@@ -58,7 +61,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
