- add wdaLocalPort for iPad Pro 2018

--- a/MenuCycle.Tests/App.iPadPro2018.config
+++ b/MenuCycle.Tests/App.iPadPro2018.config
@@ -17,7 +17,7 @@
             <add key="startIWDP" value="true" />
             <add key="noReset" value="true" />
             <add key="locationServicesAuthorized" value="true" />
-<!--            <add key="wdaLocalPort" value="8103"/>-->
+            <add key="wdaLocalPort" value="8103"/>
         </capabilities>
     </fourth>
 </configuration>
